- removed local copy of XoopsPersistableObjectHandler class (zyspec)
- removed upload folders on upgrade or uninstall if they exist (zyspec)
- removed deprecated xsitemapmenu class (zyspec)
- added zyspec as author to his changes (mamba)
- added missing $moduleDirName to installation (mamba)
- Unnecessary double quotes (mamba)
- added extra Help files (mamba)

1.53 Final [2014-04-23]
============================
- Final Release

1.53 Beta 2 [2014-04-23]
============================
- moved all images, CSS, and JS files to /assets (mamba)
- renamed .html Smarty templates to .tpl (mamba)

1.53 Beta 1 [2013-05-08]
============================
- fix: Warning: array_keys() expects parameter 1 to be array, null given (mamba)
- fix: Jobs and Classifieds info (jlm69)
- fix: deprecated notices (jlm69)

1.52 Final [2012-12-22]
============================
- changed GUI to standard XOOPS Module GUI
- included ModuleAdmin class from Mage

[2009-08-28]
============================
- Modified the step of creating the XML file. Now the file is created during
  the installation of the module in the root of the site as required by the
  XML standard for the sitemap. When you create the XML file in the
  installation phase of the module, it is not complete since Xsitemap is not
  yet able to read the plugin installed. We must then rebuild the XML file
  with the appropriate button from the control panel or by visiting the page
  xsitemap/xml_google.php.

[2009-08-26]
============================
- Added sitemap XML now generated the system file xsitemap.xml to send to
  the search engines
- Added language file main.php
- Added new definitions for the language file in admin.php , modinfo.php
- updated the english language translation

[2009-08-22]
============================
- Fixed a small bug in the file includes/install.php thanks to DUGRIS
- Added Portoghesebr language translation - by Artsgeral
- Added English language translation - by dbman
- Amended language file admin.php
