@@ -73,7 +73,7 @@ function xoops_module_install_xsitemap(XoopsModule $module)
     include_once $GLOBALS['xoops']->path("modules/" . $module->dirname(). "/class/dummy.php");
 
     //Create the xsitemap.xml file in the site root
-    $xsitemap_show = xsitemap_generate_sitemap();
+    $xsitemap_show = xsitemapGenerateSitemap();
     return xsitemap_save($xsitemap_show) ? true : false;
     */
 }
@@ -108,7 +108,7 @@ function xoops_module_pre_update_xsitemap(XoopsModule $module)
  *
  * @return bool true if successfully updated module, false if not
  */
-function xoops_module_update_xsitemap($module, $curr_version = null)
+function xoops_module_update_xsitemap(XoopsModule $module, $previousVersion = null)
 {
     /*======================================================================
         //----------------------------------------------------------------
@@ -130,7 +130,7 @@ function xoops_module_update_xsitemap($module, $curr_version = null)
     ======================================================================*/
 
     $moduleDirName = $module->getVar('dirname');
-    $xsHelper      = \Xmf\Module\Helper::getHelper($moduleDirName);
+    $xsitemapHelper      = \Xmf\Module\Helper::getHelper($moduleDirName);
 
     $utilsClass = ucfirst($moduleDirName) . 'Utility';
     if (!class_exists($utilsClass)) {
@@ -142,18 +142,18 @@ function xoops_module_update_xsitemap($module, $curr_version = null)
 
     $success = true;
 
-    $xsHelper->loadLanguage('modinfo');
-    $xsHelper->loadLanguage('admin');
+    $xsitemapHelper->loadLanguage('modinfo');
+    $xsitemapHelper->loadLanguage('admin');
 
-    if ($prev_version < 154) {
+    if ($previousVersion < 154) {
         //----------------------------------------------------------------
         // Remove previous css & images directories since they've been relocated to ./assets
         // Also remove uploads directories since they're no longer used
         //----------------------------------------------------------------
         $old_directories = array(
-            $xsHelper->path('css/'),
-            $xsHelper->path('js/'),
-            $xsHelper->path('images/'),
+            $xsitemapHelper->path('css/'),
+            $xsitemapHelper->path('js/'),
+            $xsitemapHelper->path('images/'),
             XOOPS_UPLOAD_PATH . '/' . $module->dirname()
         );
         foreach ($old_directories as $old_dir) {
@@ -161,7 +161,7 @@ function xoops_module_update_xsitemap($module, $curr_version = null)
             if ($dirInfo->isDir()) {
                 // The directory exists so delete it
                 if (false === $utilsClass::rrmdir($old_dir)) {
-                    $xoopsModule->setErrors(sprintf(_AM_XSITEMAP_ERROR_BAD_DEL_PATH, $old_dir));
+                    $module->setErrors(sprintf(_AM_XSITEMAP_ERROR_BAD_DEL_PATH, $old_dir));
                     return false;
                 }
             }
@@ -173,13 +173,13 @@ function xoops_module_update_xsitemap($module, $curr_version = null)
         // been replaced by *.tpl files
         // Note: this will also remove /template/xsitemap_style.html since it's no longer used
         //-----------------------------------------------------------------------
-        $path       = $xsHelper->path('templates/');
+        $path       = $xsitemapHelper->path('templates/');
         $unfiltered = new RecursiveIteratorIterator(new RecursiveDirectoryIterator($path));
         $iterator   = new RegexIterator($unfiltered, "/.*\.html/");
         foreach ($iterator as $name => $fObj) {
             if ($fObj->isFile() && ('index.html' !== $fObj->getFilename())) {
                 if (false === ($success = unlink($fObj->getPathname()))) {
-                    $xoopsModule->setErrors(sprintf(_AM_XSITEMAP_ERROR_BAD_REMOVE, $fObj->getPathname()));
+                    $module->setErrors(sprintf(_AM_XSITEMAP_ERROR_BAD_REMOVE, $fObj->getPathname()));
                     return false;
                 }
             }
@@ -189,9 +189,9 @@ function xoops_module_update_xsitemap($module, $curr_version = null)
         // Now remove a some misc files that were renamed or deprecated
         //-----------------------------------------------------------------------
         $oldFiles = array(
-            $xsHelper->path('include/install.php'),
-            $xsHelper->path('class/module.php'),
-            $xsHelper->path('class/menu.php')
+            $xsitemapHelper->path('include/install.php'),
+            $xsitemapHelper->path('class/module.php'),
+            $xsitemapHelper->path('class/menu.php')
         );
         foreach ($oldFiles as $file) {
             if (is_file($file)) {
@@ -230,14 +230,14 @@ function xoops_module_uninstall_xsitemap(XoopsModule $module)
 {
     //    return true;
     $moduleDirName = $module->getVar('dirname');
-    $xsHelper      = \Xmf\Module\Helper::getHelper($moduleDirName);
+    $xsitemapHelper      = \Xmf\Module\Helper::getHelper($moduleDirName);
     $utilsClass    = ucfirst($moduleDirName) . 'Utility';
     if (!class_exists($utilsClass)) {
         xoops_load('utility', $moduleDirName);
     }
 
     $success = true;
-    $xsHelper->loadLanguage('admin');
+    $xsitemapHelper->loadLanguage('admin');
 
     //------------------------------------------------------------------
     // Remove xSitemap uploads folder (and all subfolders) if they exist
