@@ -10,9 +10,7 @@
     No special measures necessary, follow the standard installation process – extract the xsitemap folder into the
     ../modules directory. Install the module through Admin -> System Module -> Modules.
     <br><br>
-    Detailed instructions on installing modules are available in the <a
-            href="https://www.gitbook.com/book/xoops/xoops-operations-guide/" target="_blank">XOOPS Operations
-        Manual</a> </p>
+    Detailed instructions on installing modules are available in the <a href="https://www.gitbook.com/book/xoops/xoops-operations-guide/" target="_blank">XOOPS Operations Manual</a>
 
     <h4 class="odd">OPERATING INSTRUCTIONS</h4>
     <p class="even">
