@@ -5,19 +5,17 @@
             <ul>
                 <{foreach item=parent from=$module.parent}>
                     <li>
-                    <a href="<{$xoops_url}>/modules/<{$module.directory}>/<{$parent.url}>"><{$parent.title}></a>
-                    <{if $show_subcategories}>
-                        <{if $parent.child}>
-                            <ul>
-                                <{foreach item=child from=$parent.child}>
-                                    <li><a href="<{$xoops_url}>/modules/<{$module.directory}>/<{$child.url}>"><{$child.title}></a></li>
-                                <{/foreach}>
-                            </ul>
+                        <a href="<{$xoops_url}>/modules/<{$module.directory}>/<{$parent.url}>"><{$parent.title}></a>
+                        <{if $show_subcategories}>
+                            <{if $parent.child}>
+                                <ul>
+                                    <{foreach item=child from=$parent.child}>
+                                        <li><a href="<{$xoops_url}>/modules/<{$module.directory}>/<{$child.url}>"><{$child.title}></a></li>
+                                    <{/foreach}>
+                                </ul>
+                            <{/if}>
                         <{/if}>
-                        </li>
-                    <{else}>
-                        </li>
-                    <{/if}>
+                    </li>
                 <{/foreach}>
             </ul>
         <{/if}>
